--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Java陋室铭
-SEOTitle: 谈笑有鸿儒，往来无白丁
+title: 谈笑有鸿儒，往来无白丁
+SEOTitle: Java陋室铭
 header-img: img/post-bg-desk.jpg
 email: 1305558920@qq.com
 description: "java分享网站，想起来才会记一笔"
